--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,6 +33,10 @@ body {
 	line-height: 1;
 }
 
+	body.imm{
+		text-align: justify;
+	}
+
 ol, ul {
 	list-style: none;
 }
@@ -155,7 +159,7 @@ input, select, textarea {
 
 		}
 
-	a, link {
+	a {
 		-moz-transition: color 0.2s ease, border-bottom 0.2s ease;
 		-webkit-transition: color 0.2s ease, border-bottom 0.2s ease;
 		-ms-transition: color 0.2s ease, border-bottom 0.2s ease;
@@ -167,10 +171,17 @@ input, select, textarea {
 		a:visited {
 			color: #00CC97;
 		}
+			a:visited.imm{
+				color: #FFD700;
+			}
 
 		a:hover {
 			border-bottom-color: transparent;
 		}
+
+			a:hover.imm{
+				background-color: #007F5F;						
+			}			
 
 	strong, b {
 		font-weight: 400;
@@ -200,13 +211,20 @@ input, select, textarea {
 		font-weight: 300;
 		line-height: 1.5;
 		margin: 0 0 0.7em 0;
-		letter-spacing: -0.025em;
+		letter-spacing: -0.025em;		
 	}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 			color: inherit;
 			text-decoration: none;
 		}
+
+		h1.imm {
+			background-image: url("images/h1_background.jpg");
+			font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+			font-size: 20pt;			
+		}
+
 
 	h1 {
 		font-size: 2.5em;
@@ -2414,6 +2432,11 @@ input, select, textarea {
 		margin: 0 0 2em 0;
 		padding-left: 1em;
 	}
+
+		ul.imm li{
+			text-align: left;
+			margin-left: 10px;
+		}
 
 		ul li {
 			padding-left: 0.5em;
