--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1933,6 +1933,10 @@ input, select, textarea {
 			font-size: 0.8em;
 		}
 
+		.button.small.imm{
+			margin-left: 80%;
+		}
+		
 		input[type="submit"].large,
 		input[type="reset"].large,
 		input[type="button"].large,
