--- a/assets/css/pra_text.css
+++ b/assets/css/pra_text.css
@@ -2543,7 +2543,7 @@ input, select, textarea {
 
 		dl.alt dt {
 			display: block;
-			width: 100;
+			width: 100%;
 			margin: 0;
 			clear: left;
 			float: left;
@@ -3415,7 +3415,7 @@ input, select, textarea {
 			
 
 				#nav + #main {
-					padding-top: 20;
+					padding-top: 20%;
 				}
 
 		}
