--- a/assets/css/printmedia.css
+++ b/assets/css/printmedia.css
@@ -2492,7 +2492,7 @@ input, select, textarea {
 
 		dl.alt dt {
 			display: block;
-			width: 100;
+			width: 100%;
 			margin: 0;
 			clear: left;
 			float: left;
@@ -3350,7 +3350,7 @@ input, select, textarea {
 			
 
 				#nav + #main {
-					padding-top: 20;
+					padding-top: 20%;
 				}
 
 		}
